refactor : Balls 비교 메서드 로직 변경